chore: make sure the cube animation does not overflow

--- a/src/animation.css
+++ b/src/animation.css
@@ -1,17 +1,3 @@
-  
-  
-.animation-container {
-    position: absolute;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-}
-
-.animation-container {
-    font-family: 'Exo', sans-serif;
-}
-
 .context {
     width: 100%;
     position: absolute;
@@ -27,11 +13,10 @@
 
 
 .area{
+    overflow: hidden;
     position: absolute;
     width: 100%;
     height: 100%;
-    
-   
 }
 
 .circles{
